<resources>
    <string name="app_name">iLost</string>

    <string name="home">Home</string>
    <string name="message">Message</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>

    <string name="skip">Skip</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Are you sure to delete?</string>
    <string name="no">No</string>
    <string name="edit_message">Edit Message</string>

    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_have_acc">Don\'t have account</string>

    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="com_password">Comfirm Password</string>
    <string name="user_name">Username</string>
    <string name="no_acc">No account? click to Sign Up</string>
    <string name="r_signup_with">Or Sign up via</string>
    <string name="have_acc">Already have account? click to Sign In</string>
    <string name="verify_code">Verification code</string>
    <string name="pls_type_verify_code">Please type the verification code sent to your phone.</string>
    <string name="not_receive_verify">Did not receive the code?</string>

    <!--facebook-->
    <string name="facebook_app_id">556138374761035</string>
    <string name="fb_login_protocol_scheme">fb556138374761035</string>
    <string name="please_wait">please wait</string>
    <string name="resend_code">Resend Code</string>
    <string name="log_with_phone">Phone Login</string>
    <string name="hint_phone_num">Phone Number</string>
    <string name="verify_note">By Login with phone number,
        you need to insert your phone number and then the verify code will send to your phone.</string>

    <string name="consumer_key">b4eIK7iOS0Zk1k0IPnWoAs5LV</string>
    <string name="consumer_secret">lvuFCHYpXUL2NAsJBKCCZVwFi2AjmDmbjCGAR0Mn62ZMOLQMiI</string>

    <string name="post_name">Post Name</string>
    <string name="title">Title</string>
    <string name="lost">Lost</string>
    <string name="found">Found</string>
    <string name="add_post">Add Post</string>
    <string name="date">Date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="location">Location</string>
    <string name="post">POST</string>
    <string name="comment">Comment</string>
    <string name="save">Save</string>

    <string-array name="cat">
        <item>Category</item>
        <item>Study Tools</item>
        <item>Computers | Accessories</item>
        <item>Phones | Tablets</item>
        <item>Vehicles</item>
        <item>Sport Equipments</item>
    </string-array>
    <string-array name="location">
        <item>Location</item>
        <item>Phnom Penh</item>
        <item>Prey Veng</item>
        <item>Kondal</item>
        <item>Takeo</item>
        <item>Poipet</item>
        <item>Seim Reap</item>
        <item>Kompong Chhnang</item>
        <item>Kompong Cham</item>
        <item>Kompong Spoeu</item>
        <item>Kompong Thom</item>
        <item>Battombong</item>
        <item>Svay Reing</item>
        <item>Presh Vihea</item>
    </string-array>

</resources>
